<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/row_background" >

    <TextView
        android:id="@+id/textViewFlightNr"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="left"
        android:text="@string/flightID_list_row"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/textViewFlightNr"
        android:text="@string/flightDate_list_row"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewDate"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/textViewFlightNr"
        android:text="@string/flightHour_list_row"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewTime"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@+id/textViewTime"
        android:gravity="center"
        android:text="@string/flightHeight_list_row" />

</RelativeLayout>