<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FlightsActivity" >

     <ListView
         android:id="@+id/flightsList"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_below="@+id/textViewFlightId"
         android:layout_centerHorizontal="true" >

     </ListView>

     <TextView
         android:id="@+id/textViewFlightId"
         android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/flightsList"
         android:text="@string/flightID_list_row"
         android:textAppearance="?android:attr/textAppearanceMedium" />

     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/textViewFlightId"
         android:layout_alignBottom="@+id/textViewFlightId"
         android:layout_marginLeft="20dp"
         android:layout_toRightOf="@+id/textViewFlightId"
         android:text="@string/flightDateAndTime_list_row"
         android:textAppearance="?android:attr/textAppearanceMedium" />

     <TextView
         android:id="@+id/textViewMaxHeightLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/flightsList"
         android:layout_marginLeft="30dp"
         android:layout_toRightOf="@+id/textView3"
         android:text="@string/flightHeight_list_row"
         android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
