<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OptionsActivity" >

    <SeekBar
        android:id="@+id/seekBarVeriticalSpeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="21dp" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/seekBarVeriticalSpeed"
        android:layout_alignParentTop="true"
        android:text="@string/options_verSpeed"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/seekBarRotationSpeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewTime"
        android:layout_below="@+id/textViewTime" />

    <SeekBar
        android:id="@+id/seekBarEuler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewHeight"
        android:layout_below="@+id/textViewHeight" />

    <TextView
        android:id="@+id/textViewSpeedV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewDate"
        android:layout_marginLeft="25dp"
        android:layout_toRightOf="@+id/textViewDate"
        android:text="@string/blank"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewRSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textViewTime"
        android:layout_alignBaseline="@+id/textViewTime"
        android:layout_marginLeft="25dp"
        android:text="@string/blank"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewMaxHeightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/seekBarAltitiude"
        android:layout_below="@+id/seekBarEuler"
        android:layout_marginTop="26dp"
        android:text="@string/options_maxAlt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/seekBarVeriticalSpeed"
        android:layout_below="@+id/seekBarVeriticalSpeed"
        android:layout_marginTop="22dp"
        android:text="@string/options_rotSpeed"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/seekBarRotationSpeed"
        android:layout_below="@+id/seekBarRotationSpeed"
        android:layout_marginTop="21dp"
        android:text="@string/options_eulerAng"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/seekBarAltitiude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/seekBarEuler"
        android:layout_below="@+id/textViewMaxHeightLabel" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/seekBarAltitiude"
        android:layout_alignParentBottom="true"
        android:text="@string/options_ledAnim"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewMaxA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewMaxHeightLabel"
        android:layout_alignBottom="@+id/textViewMaxHeightLabel"
        android:layout_toRightOf="@+id/textViewMaxHeightLabel"
        android:layout_marginLeft="25dp"
        android:text="@string/blank"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ToggleButton
        android:id="@+id/toggleButtonLed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="25dp"
        android:layout_toRightOf="@+id/textView7" />

    <TextView
        android:id="@+id/textViewEAngle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewHeight"
        android:layout_alignBottom="@+id/textViewHeight"
        android:layout_toRightOf="@+id/textViewHeight"
         android:layout_marginLeft="25dp"
        android:text="@string/blank"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
